--- a/2019/1/MAT1610/13/enunciado.tex
+++ b/2019/1/MAT1610/13/enunciado.tex
@@ -116,13 +116,19 @@
 \item Calcule el volumen del sólido generado al rotar la curva $y=x^2$ en torno al eje $y$ con $0 \leq y \leq 4$
 \item La base de un sólido es un círculo de radio $a$ y todas sus secciones perpendiculares a un diametro fijo de éste son triángulos rectángulos isósceles con la hipotenusa sobre la base del sólido. Hallar el volúmen del sólido.
 \item Determinar el volumen del sólido generado al rotar las curvas $y=x$ e $y= x^2$ en torno al eje $x$, para $x \int [0,1]$
-\item $$\displaystyle\int x^2\ arctan(x)dx$$
 \item Resuelva las siguientes integrales
 \begin{tasks}(2)
 \task $\displaystyle\int cos^2(x)dx$
 \task $\displaystyle\int cos^3(x)sen^2(x)dx$
 \task $\displaystyle\int sec^4(x)tan^2(x)dx$
 \task $\displaystyle\int sec^3(x)tan^3(x)dx$
+\end{tasks}
+\item Resuelva las siguientes integrales
+\begin{tasks}(2)
+\task $\displaystyle\int xcos(x)dx
+\task $\displaystyle\int arctan(x)dx$
+\task $\displaystyle\int ln(x)dx$
+\task $\displaystyle\int ln^2(x)dx$
 \end{tasks}
 \end{preguntas}
 \end{document}
