--- a/2019/1/MAT1610/13/solucion.tex
+++ b/2019/1/MAT1610/13/solucion.tex
@@ -198,22 +198,6 @@ Graficando:
 		Finalmente, el volumen del sólido es
 		$$V = \int_0^1 \pi(x^2+x^4)dx = \pi\left(\dfrac{x^3}{3} + \dfrac{x^5}{5}\right)\ev_0^1 = \pi \left(\dfrac{1}{3}+\dfrac{1}{5}\right) = \dfrac{8\pi}{15}$$
 \end{solucion}
-\item $$\displaystyle\int x^2\ arctan(x)dx$$
-\begin{solucion}
-Usamos integración por partes, con
-		$$U = arctan(x) \ra du = \dfrac{dx}{1+x^2}$$
-		$$dv = x^2 \ra V = \dfrac{x^3}{3}dx$$
-		Luego,
-		$$\displaystyle\int x^2\ arctan(x)dx = \dfrac{x^3}{3}arctan(x) - \dfrac{1}{3} \displaystyle\int \dfrac{x^3}{x^2+1}dx$$
-		Para la integral del lado derecho, usamos sustitución con $m = 1+x^2 \ra dm = 2xdx$, con lo que
-		$$\displaystyle\int \dfrac{x^3}{x^2+1}dx
-		= \dfrac{1}{2}\displaystyle\int \dfrac{m-1}{m}dm
-		= \dfrac{1}{2}\displaystyle\int \left(1-\dfrac{1}{m}\right)dm = \dfrac{1}{2}(m-ln|m|)$$
-		Volvemos a la variable original
-		$$= \dfrac{1}{2}(1+x^2-ln(1+x^2))$$
-		Finalmente, reemplazando en el inicio,
-		$$\displaystyle\int x^2\ arctan(x)dx = \dfrac{x^3}{3}arctan(x) - \dfrac{1}{6} (1+x^2-ln(1+x^2))$$
-\end{solucion}
 \item Resuelva las siguientes integrales
 \begin{tasks}(2)
 \task $\displaystyle\int cos^2(x)dx$
@@ -274,6 +258,64 @@ Usamos integración por partes, con
 			= \dfrac{u^5}{5} - \dfrac{u^3}{3} + c$$
 			Finalmente, volvemos a la variable original, con lo que
 			$$= \dfrac{sec^5(x)}{5} - \dfrac{sec^3(x)}{3} + c$$	
+\end{enumerate}
+\end{solucion}
+\item Resuelva las siguientes integrales
+\begin{tasks}(2)
+\task $\displaystyle\int xcos(x)dx
+\task $\displaystyle\int arctan(x)dx$
+\task $\displaystyle\int ln(x)dx$
+\task $\displaystyle\int ln^2(x)dx$
+\end{tasks}
+\begin{solucion}
+Recordemos primero que
+		$$\displaystyle\int Udv = UV - \displaystyle\int Vdu$$
+		Además, para todos estos ejercicios debemos recordar lo siguiente: ILATE,
+		donde\\\\
+		I: Inversa trigonométrica\\
+		L: Logarítmica\\
+		A: Algebraica\\
+		T: Trigonométrica\\
+		E: Exponencial\\\\
+		La función que esté primero en la lista, la usaremos como $U$. La que este despues, será $dv$.
+\begin{enumerate}[a)]
+\item $\displaystyle\int xcos(x)dx$\\\\
+			Aquí podemos ver dos funciones: $x$ que es algebraica y $cos(x)$ que es trigonométrica. Como $x^2$ esta primero en la lista, entonces
+			$$U = x, \quad dv = cos(x)dx$$
+			Para obtener $V$ y $du$, derivamos e integramos según corresponda
+			$$du = dx, \quad V = sen(x)$$
+			Luego, aplicando la regla de la vaca, tenemos que
+			$$\displaystyle\int xcos(x)dx = xsen(x) - \displaystyle\int sen(x)dx = xsen(x) +cos(x) + c $$
+\item $\displaystyle\int arctan(x)dx$\\\\
+			Es evidente que en este caso debemos tomar
+			$$U = arctan(x), \quad dv = dx \ra du = \dfrac{dx}{1+x^2}, \quad V = x$$
+			Luego,
+			$$\displaystyle\int arctan(x)dx 
+			= x\ arctan(x) - \displaystyle\int \dfrac{xdx}{1+x^2} $$
+			Utilizamos $w = 1+x^2 \ra dw = 2xdx$, 
+			$$= x\ arctan(x) - \dfrac{1}{2}\displaystyle\int \dfrac{dw}{w} + c
+			= x\ arctan(x) - \dfrac{1}{2}ln(w)$$
+			$$= \ arctan(x) - \dfrac{1}{2}ln(1+x^2) + c$$
+\item $\displaystyle\int ln(x)dx$\\\\
+			En este caso,
+			$$U = ln(x), \quad dv = dx \ra du = \dfrac{dx}{x}, \quad V = x$$
+			Luego, 
+			$$\displaystyle\int ln(x)dx
+			= xln(x) - \displaystyle\int \dfrac{xdx}{x}
+			= xln(x) - \displaystyle\int dx
+			= xln(x) - x + c
+			$$
+\item $\displaystyle\int ln^2(x)dx$\\\\
+			De la misma forma que antes
+			$$U = ln^2(x), \quad dv = dx \ra du = 2ln(x)\dfrac{1}{x}dx, \quad V = x$$
+			Con esto,
+			$$\displaystyle\int ln^2(x)dx = xln^2(x) - 2\displaystyle\int ln(x)dx$$
+			Por el ejercicio anterior sabemos que
+			$$\displaystyle\int ln(x)dx = xln(x) -x$$
+			Luego,
+			$$=xln^2(x) - 2(xln(x) - x) + c$$
+			Finalmente,
+			$$\displaystyle\int ln^2(x)dx = xln^2(x) - 2xln(x) + x + c$$
 \end{enumerate}
 \end{solucion}
 \end{preguntas}
