Solución de 2019/1/MAT1610/13

--- a/2019/1/MAT1610/13/solucion.tex
+++ b/2019/1/MAT1610/13/solucion.tex
@@ -200,7 +200,7 @@ Graficando:
 \end{solucion}
 \item Resuelva las siguientes integrales
 \begin{tasks}(2)
-\task $\displaystyle\int xcos(x)dx
+\task $\displaystyle\int xcos(x)dx$
 \task $\displaystyle\int arctan(x)dx$
 \task $\displaystyle\int ln(x)dx$
 \task $\displaystyle\int ln^2(x)dx$
