Enunciado de 2019/1/MAT1203/13

--- a/2019/1/MAT1203/13/enunciado.tex
+++ b/2019/1/MAT1203/13/enunciado.tex
@@ -113,5 +113,17 @@
 \end{center}
 
 \begin{preguntas}
+\item Sea 
+	$U = Gen\left\{
+	\begin{bmatrix}1\\0\\1\\1\end{bmatrix},
+	\begin{bmatrix}0\\1\\2\\1\end{bmatrix},
+	\begin{bmatrix}1\\1\\3\\2\end{bmatrix}
+	\right\}$.
+\begin{enumerate}[a)]
+\item Encuentre una base ortonormal de $U$.
+\item Encuentre la distancia de $b = 
+		\begin{bmatrix}1\\1\\1\\1\end{bmatrix}$ a $U$.
+\end{enumerate}
+\item Un cierto experimento genera los datos $(1,3)$, $(2,5)$ y $(3,4)$. Describa el modelo que da un ajuste de mínimos cuadrados de esos puntos mediante una recta de la forma $y = \beta_0 +  \beta_1x$
 \end{preguntas}
 \end{document}
