Enunciado de 2018/1/MAT1203/13

--- a/2018/1/MAT1203/13/enunciado.tex
+++ b/2018/1/MAT1203/13/enunciado.tex
@@ -113,5 +113,25 @@
 \end{center}
 
 \begin{preguntas}
+\item Sea $A = \begin{bmatrix}1 & -3 \\ -3 & 9\end{bmatrix}$
+\begin{enumerate}[a)]
+\item Encuentre una matriz $L$ cuadrada, triangular inferior con numeros 1 en la diagonal, y una matriz diagonal $D$ tal que $A = LDL^T$.
+\item Realice un cambio de variable $x=Py$ que transforme la forma cuadrática
+		$$Q\left(\begin{bmatrix}x_1\\x_2\end{bmatrix}\right) = \begin{bmatrix}x_1& x_2\end{bmatrix}A\begin{bmatrix}x_1\\ x_2\end{bmatrix}$$
+		en una sin términos con producto cruzado.
+\end{enumerate}
+\item Sea $A$ la matriz simétrica que representa a la forma cuadrática
+	$$Q(x) = 9x_1^2 + 7x_2^2 + 11x_3^2 - 8x_1x_2 + 8x_1x_3$$
+\begin{enumerate}[a)]
+\item Encuentre una matriz ortogonal $P$ tal que el cambio de variable $x = Py$ transforma la forma $x^TAx$ en una forma cuadrática sin productos cruzados.
+\item Escriba la forma cuadrática en las nuevas variables y clasifíquela.
+\end{enumerate}
+\item Calcule la descomposición en valores singulares de la matriz $A = \begin{bmatrix}4 & 11 & 14\\ 8 & 7 & -2\end{bmatrix}$
+\item Sea la matriz
+	$A = \begin{bmatrix}
+	1 & 0 \\1 & 1 \\
+	-1 & 1
+	\end{bmatrix}$
+	, determine su descomposición en valores singulares.
 \end{preguntas}
 \end{document}
