--- a/2019/1/MAT1203/13/enunciado.tex
+++ b/2019/1/MAT1203/13/enunciado.tex
@@ -125,5 +125,11 @@
 		\begin{bmatrix}1\\1\\1\\1\end{bmatrix}$ a $U$.
 \end{enumerate}
 \item Un cierto experimento genera los datos $(1,3)$, $(2,5)$ y $(3,4)$. Describa el modelo que da un ajuste de mínimos cuadrados de esos puntos mediante una recta de la forma $y = \beta_0 +  \beta_1x$
+\item Sea $A$ la matriz simétrica que representa a la forma cuadrática
+	$$Q(x) = 9x_1^2 + 7x_2^2 + 11x_3^2 - 8x_1x_2 + 8x_1x_3$$
+\begin{enumerate}[a)]
+\item Encuentre una matriz ortogonal $P$ tal que el cambio de variable $x = Py$ transforma la forma $x^TAx$ en una forma cuadrática sin productos cruzados.
+\item Escriba la forma cuadrática en las nuevas variables y clasifíquela.
+\end{enumerate}
 \end{preguntas}
 \end{document}
