Solución de 2019/1/MAT1203/13

--- a/2019/1/MAT1203/13/solucion.tex
+++ b/2019/1/MAT1203/13/solucion.tex
@@ -323,5 +323,18 @@ Los valores del experimento se pueden ver en las siguiente tabla:\\
 		 Finalmente, el ajuste por mínimos cuadrados es
 		 $$y = 3 + \dfrac{1}{2}x$$
 \end{solucion}
+\item Sea $A$ la matriz simétrica que representa a la forma cuadrática
+	$$Q(x) = 9x_1^2 + 7x_2^2 + 11x_3^2 - 8x_1x_2 + 8x_1x_3$$
+\begin{enumerate}[a)]
+\item Encuentre una matriz ortogonal $P$ tal que el cambio de variable $x = Py$ transforma la forma $x^TAx$ en una forma cuadrática sin productos cruzados.
+\item Escriba la forma cuadrática en las nuevas variables y clasifíquela.
+\end{enumerate}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item 
+\item 
+\end{enumerate}
+\end{solucion}
 \end{preguntas}
 \end{document}
