Enunciado de 2019/1/MAT1610/14

--- a/2019/1/MAT1610/14/enunciado.tex
+++ b/2019/1/MAT1610/14/enunciado.tex
@@ -113,5 +113,16 @@
 \end{center}
 
 \begin{preguntas}
+\item Resuelva las siguientes integrales
+\begin{tasks}(2)
+\task $\displaystyle\int \dfrac{dx}{\sqrt[]{(4-x^2)^3}}$
+\task $\displaystyle\int \dfrac{xdx}{\sqrt[]{1+x^2}}$
+\task $\displaystyle\int \dfrac{dx}{x\ \sqrt[]{x^2-1}}$
+\task $\displaystyle\int \dfrac{dx}{\sqrt[]{16+6x-x^2}}$
+\end{tasks}
+\item Resuelva la siguiente integral
+	$$\displaystyle\int \dfrac{dx}{x(200-x)}$$
+\item Calcular la integral
+	$$\displaystyle\int_0^1 \dfrac{x^3+6x^2+13x+10}{x+1}dx$$
 \end{preguntas}
 \end{document}
